--- a/TODO
+++ b/TODO
@@ -1,3 +1,3 @@
 Avoid spurious loading of playlists
-Add stream switching to svc_radio.py
 Add playlist detection to streams
+Separate station handling properly from TunerPotReader and StreamManager
