New service class implemented.

--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
 Avoid spurious loading of playlists
 Add playlist detection to streams
 Separate station handling properly from TunerPotReader and StreamManager
+Fix spurious updates
